# sdl2template

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
